<resources>
    <string name="app_name">Calculator</string>

    <!--name and value for the number buttons-->
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

    <!--name and value for the function buttons-->
    <string name="addition">+</string>
    <string name="subtraction">-</string>
    <string name="multiplication">×</string>
    <string name="division">÷</string>
    <string name="percentage">%</string>
    <string name="equals">=</string>
    <string name="delete">delete</string>


    <string name="clear">C</string>
    <string name="dot">.</string>
    <string name="plusMinus">+/-</string>

    <!--display strings-->
    <string name="numberDisplay">Enter Value</string>


</resources>