<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numberDisplay"
        app:layout_constraintVertical_bias="0.90999997">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/clear"
                android:onClick="clrBtn"
                android:layout_margin="5dp"
                android:textSize="20sp"
                android:backgroundTint="#AA3939"/>


            <Button
                android:id="@+id/plusMinus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/plusMinus"
                android:onClick="plusMinusBtn"
                android:textSize="20sp" />

            <Button
                android:id="@+id/percentage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/percentage"
                android:onClick="perBtn"
                android:layout_margin="5dp"
                android:textSize="20sp"/>

            <Button
                android:id="@+id/division"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/division"
                android:onClick="divBtn"
                android:layout_margin="5dp"
                android:textSize="20sp"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/one"
                android:onClick="oneBtn"
                android:layout_margin="5dp"
                android:textSize="20sp"/>

            <Button
                android:id="@+id/two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/two"
                android:onClick="twoBtn"
                android:layout_margin="5dp"
                android:textSize="20sp"/>

            <Button
                android:id="@+id/three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/three"
                android:onClick="threeBtn"
                android:layout_margin="5dp"
                android:textSize="20sp"/>

            <Button
                android:id="@+id/multiplication"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/multiplication"
                android:onClick="mulBtn"
                android:layout_margin="5dp"
                android:textSize="20sp"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/four"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/four"
                android:onClick="fourBtn"
                android:layout_margin="5dp"
                android:textSize="20sp"/>

            <Button
                android:id="@+id/five"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/five"
                android:onClick="fiveBtn"
                android:layout_margin="5dp"
                android:textSize="20sp"/>

            <Button
                android:id="@+id/six"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/six"
                android:onClick="sixBtn"
                android:layout_margin="5dp"
                android:textSize="20sp"/>

            <Button
                android:id="@+id/addition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/addition"
                android:onClick="addBtn"
                android:layout_margin="5dp"
                android:textSize="20sp"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/seven"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/seven"
                android:onClick="sevenBtn"
                android:layout_margin="5dp"
                android:textSize="20sp"/>

            <Button
                android:id="@+id/eight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/eight"
                android:onClick="eightBtn"
                android:layout_margin="5dp"
                android:textSize="20sp"/>

            <Button
                android:id="@+id/nine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nine"
                android:onClick="nineBtn"
                android:layout_margin="5dp"
                android:textSize="20sp"/>

            <Button
                android:id="@+id/subtraction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/subtraction"
                android:onClick="subBtn"
                android:layout_margin="5dp"
                android:textSize="20sp"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/zero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="6"
                android:onClick="zeroBtn"
                android:text="@string/zero"
                android:textSize="20sp" />

            <Button
                android:id="@+id/dot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:text="@string/dot"
                android:onClick="dotBtn"
                android:layout_margin="5dp"
                android:textSize="20sp"/>

            <Button
                android:id="@+id/equals"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:text="@string/equals"
                android:onClick="equalsBTN"
                android:layout_margin="5dp"
                android:textSize="20sp"
                android:backgroundTint="#277650"/>

        </TableRow>

    </TableLayout>

    <EditText
        android:id="@+id/numberDisplay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:autofillHints="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:gravity="end"
        android:inputType="none"
        android:textAlignment="textEnd"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultView" />

    <ImageButton
        android:id="@+id/delete"
        android:layout_width="98dp"
        android:layout_height="44dp"
        android:layout_margin="5dp"
        android:backgroundTint="#277552"
        android:contentDescription=" @string/delete"
        android:onClick="backSpaceBtn"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numberDisplay"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/backspace" />

    <TextView
        android:id="@+id/resultView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:cursorVisible="false"
        android:editable="false"
        android:focusable="false"
        android:text=""
        android:textAlignment="textEnd"
        android:layout_gravity="end"
        android:gravity="end"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

</androidx.constraintlayout.widget.ConstraintLayout>